--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="css/style.css"> 
+        <link rel="stylesheet" href="сss/style.css"> 
     </head> 
     <body> 
         <ul> 
@@ -30,7 +30,7 @@
             </li> 
         </ul> 
         <h1>Contact with me: </h1> 
-            <ol> 
+            <ul> 
                 <li> 
                     <a href="https://github.com/git-aidai-kydykbekova">My GitHub </a> 
                 </li> 
@@ -46,10 +46,11 @@
                 <li> 
                     <a href="+99654321235643">Phone Number</a> 
                 </li> 
-            </ol>
+            </ul>
+            <p> I always open to new idea for creae a projects. We can collaborate with each other. Create an incrediable project. CONTACT WITH ME. </p>
         
-        <img src="img/contact.jpeg"/> 
-    
+        <div id = "photo_contact"><img src="img/contact.jpeg"/> </div>
+        <script src="js/script.js" ></script> 
     </body> 
-    <script src="js/script.js" ></script> 
+   
 </html>
