--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet"> 
-        <link rel="styleshee t" href="css/style.css"> 
+        <link rel="stylesheet" href="сss/style.css"> 
     </head> 
     <body> 
         <h1>Kydykbekova Aidai COMSE-23</h1>
@@ -36,6 +36,6 @@
             Hello everyone! My name is Aiai Kydykbekova. I am studying in AlaToo university. I am a java developer.
             in this page you will know about me more.If you are interesting in go to pages.
         </p>  
+        <script src="js/script.js" ></script> 
     </body> 
-    <script src="js/script.js" ></script> 
 </html>
