--- a/works.html
+++ b/works.html
@@ -5,11 +5,10 @@
         <meta name="viewport" content="width=device-width"> 
         <title>My Portfolio</title> 
 
-        </style> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet"> 
-        <link rel="styleshee t" href="css/style.css"> 
+        <link rel="stylesheet" href="сss/style.css"> 
     </head> 
     <body> 
         <h1>Kydykbekova Aidai COMSE-23</h1>
@@ -33,8 +32,14 @@
 
          
         <p><a href="https://github.com/git-aidai-kydykbekova/project-web"> 
-            My project for web design</a> </p> 
-        
+            My project for web design</a> Project for cite AlaToo  University </p> 
+        <p><a href = "https://github.com/git-aidai-kydykbekova/ship_battle" > My project Sea Battle</a> Use knowledge at university, create a game using 2d matrices</p>
+        <p><a href = "https://github.com/git-aidai-kydykbekova/e-shop"> My project ecommerce</a> Using Spring, Spring Boot, Spring Security, Lombok, PostgreSQL </p>
+
+       <img src="img/photo_2jpeg.jpeg" alt="Aidai" /> 
+
+
+            <script src="js/script.js" ></script> 
     </body> 
-    <script src="js/script.js" ></script> 
+   
 </html>
