--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
-        <title>My Portfolio</title> 
+        <title>ABOUT</title> 
 
         </style> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -14,7 +14,7 @@
     <body> 
 
 
-        <h1>Kydykbekova Aidai COMSE-23</h1>
+        <h1>ABOUT</h1>
         <ul>  
             <div class="navbar">
             <li> 
