--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width"> 
-        <title>AIU contacts</title> 
+        <title>contacts Aidai</title> 
     
         </style> 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -29,7 +29,7 @@
                 <a href="./index.html">Home</a> 
             </li> 
         </ul> 
-        <h1>Contact with me: </h1> 
+        <h1>Contact </h1> 
             <ul> 
                 <li> 
                     <a href="https://github.com/git-aidai-kydykbekova">My GitHub </a> 
@@ -47,7 +47,8 @@
                     <a href="+99654321235643">Phone Number</a> 
                 </li> 
             </ul>
-            <p> I always open to new idea for creae a projects. We can collaborate with each other. Create an incrediable project. CONTACT WITH ME. </p>
+            <p> I always open to new idea for creae a projects. We can collaborate with each other. Create an incrediable project. CONTACT WITH ME.
+                I'm always open and ready for collaboration! Whether you have a project in mind, are looking for a partner to brainstorm new ideas, or need someone with my skills to bring your vision to life, I'm eager to join forces and create something amazing together. My approach is flexible and creative, and I believe that by combining our strengths, we can achieve outstanding results. If you're interested in teaming up, discussing potential projects, or simply exploring how we can work together, please don't hesitate to reach out. Let's make something great happen! </p>
         
         <div id = "photo_contact"><img src="img/contact.jpeg"/> </div>
         <script src="js/script.js" ></script> 
