--- a/works.html
+++ b/works.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="сss/style.css"> 
     </head> 
     <body> 
-        <h1>Kydykbekova Aidai COMSE-23</h1>
+        <h1>WORKS</h1>
         <ul>  
             <li> 
                 <a href="./about.html">About</a> 
@@ -20,7 +20,7 @@
                 <a href="./resume.html">Resume</a> 
             </li> 
             <li> 
-                <a href="./works.html">Works</a> 
+                <a href="./contact.html">Contact</a> 
             </li> 
             <li> 
                 <a href="./gallery.html">Gallery</a> 
@@ -32,11 +32,11 @@
 
          
         <p><a href="https://github.com/git-aidai-kydykbekova/project-web"> 
-            My project for web design</a> Project for cite AlaToo  University </p> 
+            My project for web design</a> Project for cite AlaToo  University. Used CSS, HTML, JavaScript</p> 
         <p><a href = "https://github.com/git-aidai-kydykbekova/ship_battle" > My project Sea Battle</a> Use knowledge at university, create a game using 2d matrices</p>
-        <p><a href = "https://github.com/git-aidai-kydykbekova/e-shop"> My project ecommerce</a> Using Spring, Spring Boot, Spring Security, Lombok, PostgreSQL </p>
+        <p><a href = "https://github.com/git-aidai-kydykbekova/e-shop"> My project ecommerce</a>  That project online shop. You can chose every furniture. I was a teamlead and Backend developer.Using Spring, Spring Boot, Spring Security, Lombok, PostgreSQL </p>
 
-       <img src="img/photo_2jpeg.jpeg" alt="Aidai" /> 
+       <img src="img/5.jpeg" alt="Aidai" /> 
 
 
             <script src="js/script.js" ></script> 
