--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="сss/style.css"> 
     </head> 
     <body> 
-        <h1>Kydykbekova Aidai COMSE-23</h1>
+        <h1>Home</h1>
         <ul>  
             <li> 
                 <a href="./about.html">About</a> 
